--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -2690,7 +2690,7 @@ input, select, textarea {
 
 	#header {
 		background-attachment: scroll,							scroll,					fixed;
-		background-image: url("images/top-3200.svg"), url("images/overlay.png"), url("../../images/header.jpg");
+		background-image: url("images/top-1600.svg"), url("images/overlay.png"), url("../../images/forrest-smith-132147-unsplash.jpg");
 		background-position: bottom center,					top left,				center center;
 		background-repeat: repeat-x,						repeat,					no-repeat;
 		background-size: 3200px 460px,					auto,					cover;
